<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Whats Groups</string>
    <string name="nav_header_subtitle">seabirddevelopers@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_add_group">Add Group</string>
    <string name="action_view_group">View Group</string>

    <string name="menu_home">Home</string>
    <string name="menu_category">Category</string>
    <string name="menu_status_saver">Status Saver</string>
    <string name="menu_favorite">Favorite</string>
    <string name="menu_trending">Trending</string>
    <string name="tab_image">Images</string>
    <string name="tab_video">Videos</string>
    <string name="menu_other_option">Other Options</string>
    <string name="menu_share_app">Share App</string>
    <string name="menu_give_star">Give Star</string>
    <string name="menu_about_us">About us</string>
    <string name="menu_settings">Settings</string>

    <string name="continue_label">Continue</string>
    <string name="not_now_label">Not Now</string>

    <string name="storage_permission_alert_label">To read &amp; save whatsapp status, allow Whats Groups access to your Storage.</string>
    <string name="storage_permission_denied_alert_label">Whats Groups need the Storage Permission in order to read &amp; save whatsapp status, but they have been permanently denied. Please continue to app settings, select \"Permissions\", and enable \"Storage\".</string>
    <string name="storage_permission_alert_label_13">To read &amp; save whatsapp status, allow Whats Groups access to your Photos and videos.</string>
    <string name="storage_permission_denied_alert_label_13">Whats Groups need the Photos and videos Permission in order to read &amp; save whatsapp status, but they have been permanently denied. Please continue to app settings, select \"Permissions\", and enable \"Photos and videos\".</string>
    <string name="storage_permission_denied_label">Storage Permission Not Provided</string>
    <string name="enable_permission">Enable Permission</string>

    <string name="no_status_found">No Status Found</string>
    <string name="to_view_status">To View status</string>
    <string name="step_1">1. Open WhatsApp</string>
    <string name="step_2">2. View wanted status</string>
    <string name="step_3">3. Come back again</string>
    <string name="view_status">View Status</string>
    <string name="action_save_status">Save Status</string>

    <string name="file_viewing_message">You may not have a proper app viewing this content</string>
    <string name="content_not_found">Content not found</string>
    <string name="status_folder_label">WhatsApp Status</string>
    <string name="status_saved">Status Saved</string>
    <string name="share_status_desc">"Save Your Friend\'s Status \nWhatsApp Groups and Status Downloader\nhttps://play.google.com/store/apps/details?id=com.seabird.whats.groups.status.saver"</string>


    <string name="negative_button" tools:ignore="ButtonCase">CANCEL</string>
    <string name="status_download">Downloading Status</string>
    <string name="status_downloading">Downloading…</string>
    <string name="downloading_count">"%d/%d"</string>

    <string name="join_group">Join Group</string>
    <string name="report_group">Report Group</string>

    <string name="add_group_description_label">Below groups will be shown under the selected category.</string>

    <string name="select_category">Select Category</string>
    <string name="arts_and_design">Arts &amp; Design</string>
    <string name="audios_and_videos">Audios &amp; Videos</string>
    <string name="business_and_finance">Business &amp; Finance</string>
    <string name="buy_and_sell">Buy &amp; Sell</string>
    <string name="community">Community</string>
    <string name="education">Education</string>
    <string name="entertainment">Entertainment</string>
    <string name="fitness_and_health">Fitness &amp; Health</string>
    <string name="food">Food</string>
    <string name="funny">Funny</string>
    <string name="games">Games</string>
    <string name="love_and_dating">Love &amp; Dating</string>
    <string name="medical">Medical</string>
    <string name="new_friends">New Friends</string>
    <string name="news">News</string>
    <string name="social_media">Social Media</string>
    <string name="spiritual">Spiritual</string>
    <string name="sports">Sports</string>
    <string name="technology">Technology</string>
    <string name="travels_and_places">Travels &amp; Places</string>
    <string name="other">Other</string>

    <string name="group_name">Group Name</string>
    <string name="group_link">Group Link</string>
    <string name="group_description">Group Description</string>
    <string name="validation_category">Please Select a Category</string>
    <string name="validation_group_name">Please Enter group name</string>
    <string name="validation_group_valid_name">Please Enter valid group name</string>
    <string name="validation_group_link">Please Enter group link</string>
    <string name="validation_group_description">Please Enter group description</string>
    <string name="group_added">Group Added</string>
    <string name="group_reported">This group successfully reported. Will take appropriate action</string>

    <string name="description">Description</string>
    <string name="group_desc">This group used to share updates about current market status and provide valuable information about stocks which are trading lower price or stocks having high potential to reach high. Please join with us for further updates.</string>
    <string name="group_join_link">https://chat.whatsapp.com/KsExMEv4W16EzRSxDxSeuL</string>
    <string name="copy_group_link">Copy link</string>
    <string name="share_group_link">Share link</string>

    <string name="more_apps">More Apps</string>
    <string name="more_apps_desc">Check More Apps Created by Us.</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="version_name">Version %s</string>
    <string name="group_link_already_exists">Group link is already exists</string>
    <string name="authorization_error">Authorization error</string>
    <string name="server_error">Server error, Please try again</string>
    <string name="group_link_not_valid">Group Link is not valid</string>
    <string name="retry">Retry</string>
    <string name="internet_not_available">Please check your internet connection.</string>
    <string name="group_list_not_loaded">Group list not loaded</string>
    <string name="favorite_list_not_loaded">You don\'t have any favorite groups</string>
    <string name="category_list_not_loaded">Category list not loaded</string>
    <string name="group_list_is_empty">Group list is empty</string>
    <string name="delete_favourite">Delete favourite</string>


    <string name="provide_folder_access_title">Starting Android 11(Android R), \nWhats Groups can no longer access Statuses easily due to Android Storage limitations.</string>
    <string name="provide_folder_access_steps">To access Statuses again, certain additional steps are required to be followed from your end. These are only required to be performed once.</string>
    <string name="provide_folder_access_steps_desc_1">Step 1. Click on "USE THIS FOLDER" on the next screen</string>
    <string name="provide_folder_access_steps_desc_2">Step 2. Click on "ALLOW"</string>
    <string name="provide_folder_access_button">Grant Folder Access</string>
    <string name="search_label">Search Group</string>
</resources>