<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.seabird.whatsdev.ui.fragments.GroupFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_group" />

    <fragment
        android:id="@+id/nav_category"
        android:name="com.seabird.whatsdev.ui.fragments.CategoryFragment"
        android:label="@string/menu_category"
        tools:layout="@layout/fragment_category" />

    <fragment
        android:id="@+id/nav_status_saver"
        android:name="com.seabird.whatsdev.ui.fragments.StatusSaverFragment"
        android:label="@string/menu_status_saver"
        tools:layout="@layout/fragment_status_saver">
        <action
            android:id="@+id/action_status_to_status_viewer"
            app:destination="@id/nav_status_viewer" />
    </fragment>

    <fragment
        android:id="@+id/nav_status_viewer"
        android:name="com.seabird.whatsdev.ui.fragments.FullScreenMediaFragment"
        android:label="@string/menu_status_saver"
        tools:layout="@layout/fragment_full_screen_media">
        <argument
            android:name="media_position"
            android:defaultValue="0"
            app:argType="integer" />
        <argument
            android:name="from_image_list"
            android:defaultValue="true"
            app:argType="boolean" />
    </fragment>

    <fragment
        android:id="@+id/nav_video_player"
        android:name="com.seabird.whatsdev.ui.fragments.VideoPlayerFragment"
        tools:layout="@layout/fragment_video_player">
        <argument
            android:name="video_uri"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/nav_favorite_groups"
        android:name="com.seabird.whatsdev.ui.fragments.FavoriteFragment"
        android:label="@string/menu_favorite"
        tools:layout="@layout/fragment_favorite" />

    <fragment
        android:id="@+id/nav_trending_groups"
        android:name="com.seabird.whatsdev.ui.fragments.TrendingFragment"
        android:label="@string/menu_trending"
        tools:layout="@layout/fragment_trending" />

    <fragment
        android:id="@+id/nav_add_group"
        android:name="com.seabird.whatsdev.ui.fragments.AddGroupFragment"
        android:label="@string/action_add_group"
        tools:layout="@layout/fragment_add_group" />

    <fragment
        android:id="@+id/nav_view_group"
        android:name="com.seabird.whatsdev.ui.fragments.ViewGroupFragment"
        android:label="@string/action_view_group"
        tools:layout="@layout/fragment_view_group" >
        <argument
            android:name="group_data"
            app:argType="com.seabird.whatsdev.network.model.GroupModel" />
    </fragment>

    <fragment
        android:id="@+id/nav_category_group"
        android:name="com.seabird.whatsdev.ui.fragments.CategoryGroupFragment"
        android:label="@string/action_view_group"
        tools:layout="@layout/fragment_category_group" >
        <argument
            android:name="category_name"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.seabird.whatsdev.ui.fragments.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />


    <fragment
        android:id="@+id/nav_grant_folder_access"
        android:name="com.seabird.whatsdev.ui.fragments.ProvideAccessFragment"
        android:label="@string/provide_folder_access_button"
        tools:layout="@layout/fragment_provide_access" />

</navigation>