<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/linen"
    tools:context=".ui.statussaver.ProvideAccessFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/image_view_provide_permission"
                android:layout_width="@dimen/dimen_100"
                android:layout_height="@dimen/dimen_100"
                android:layout_marginTop="@dimen/dimen_50"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_storage_permission_disabled" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/provide_permission_title"
                style="@style/TextSubTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_35"
                android:layout_marginStart="@dimen/dimen_20"
                android:layout_marginEnd="@dimen/dimen_20"
                android:text="@string/provide_folder_access_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/image_view_provide_permission" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/provide_permission_steps"
                style="@style/TextSubTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_15"
                android:text="@string/provide_folder_access_steps"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/provide_permission_title" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/provide_permission_step_1"
                style="@style/TextSubTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_15"
                android:text="@string/provide_folder_access_steps_desc_1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/provide_permission_steps" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/provide_permission_step_2"
                style="@style/TextSubTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_15"
                android:text="@string/provide_folder_access_steps_desc_2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/provide_permission_step_1" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/grant_folder_access"
                style="@style/TextSubTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_50"
                android:background="@drawable/ic_view_status_background"
                android:foreground="?attr/selectableItemBackgroundBorderless"
                android:paddingStart="@dimen/dimen_20"
                android:paddingTop="@dimen/dimen_10"
                android:paddingEnd="@dimen/dimen_20"
                android:paddingBottom="@dimen/dimen_10"
                android:text="@string/provide_folder_access_button"
                android:textAllCaps="false"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/provide_permission_step_2" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>