<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/disabled_view_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/image_view_permission_not_provided"
        android:layout_width="@dimen/dimen_100"
        android:layout_height="@dimen/dimen_100"
        android:layout_marginTop="@dimen/dimen_50"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_storage_permission_disabled" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/no_permission_provided"
        style="@style/TextSubTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/storage_permission_denied_label"
        android:textSize="@dimen/text_18"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_view_permission_not_provided" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/permission_not_provided_description"
        style="@style/TextSubTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_15"
        android:textAlignment="center"
        android:text="@string/storage_permission_alert_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/no_permission_provided" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/enable_permission"
        style="@style/TextSubTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_50"
        android:background="@drawable/ic_view_status_background"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        android:paddingStart="@dimen/dimen_20"
        android:paddingTop="@dimen/dimen_10"
        android:paddingEnd="@dimen/dimen_20"
        android:paddingBottom="@dimen/dimen_10"
        android:text="@string/enable_permission"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/permission_not_provided_description" />

</androidx.constraintlayout.widget.ConstraintLayout>