<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.addgroup.AddGroupFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/category_spinner_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_20"
                android:background="@drawable/rounded_background"
                android:paddingStart="@dimen/dimen_10"
                android:paddingTop="@dimen/dimen_5"
                android:paddingEnd="@dimen/dimen_10"
                android:paddingBottom="@dimen/dimen_5"
                app:layout_constraintTop_toTopOf="parent">

                <com.seabird.spinnerview.MaterialSpinner
                    android:id="@+id/category_spinner"
                    style="@style/TextSubTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/select_category"
                    android:paddingTop="@dimen/dimen_10"
                    android:paddingBottom="@dimen/dimen_10"
                    android:textColor="@color/black"
                    android:textColorHint="@color/text_black_light"
                    app:layout_constraintTop_toTopOf="parent"
                    app:ms_hide_arrow="false"
                    app:ms_padding_left="0dp"
                    app:ms_padding_right="0dp"
                    app:ms_popup_padding_left="@dimen/dimen_5"
                    app:ms_popup_padding_right="@dimen/dimen_5" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/group_name_input_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_20"
                android:layout_marginTop="@dimen/dimen_16"
                android:layout_marginEnd="@dimen/dimen_20"
                android:hint="@string/group_name"
                app:counterEnabled="true"
                app:counterMaxLength="25"
                app:layout_constraintTop_toBottomOf="@+id/category_spinner_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/group_name_edit_text"
                    style="@style/TextSubTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapSentences"
                    android:maxLength="25" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/group_link_input_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_20"
                android:layout_marginEnd="@dimen/dimen_20"
                android:hint="@string/group_link"
                app:layout_constraintTop_toBottomOf="@+id/group_name_input_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/group_link_edit_text"
                    style="@style/TextSubTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapSentences|textMultiLine" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/group_description_input_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_20"
                android:layout_marginTop="@dimen/dimen_16"
                android:layout_marginEnd="@dimen/dimen_20"
                android:hint="@string/group_description"
                app:counterEnabled="true"
                app:counterMaxLength="512"
                app:layout_constraintTop_toBottomOf="@+id/group_link_input_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/group_description_edit_text"
                    style="@style/TextSubTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapSentences|textMultiLine"
                    android:maxLength="512"
                    android:maxLines="6" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/add_group"
                style="@style/TextSubTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_35"
                android:layout_marginEnd="@dimen/dimen_20"
                android:background="@drawable/ic_view_status_background"
                android:foreground="?attr/selectableItemBackgroundBorderless"
                android:paddingStart="@dimen/dimen_20"
                android:paddingTop="@dimen/dimen_10"
                android:paddingEnd="@dimen/dimen_20"
                android:paddingBottom="@dimen/dimen_10"
                android:text="@string/action_add_group"
                android:textAllCaps="false"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/group_description_input_layout" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>